2008-03-19	Till Straumann <strauman@slac.stanford.edu>

	* shared/startup/pretaskinghook.c: install pointer
	to rtems_malloc_sbrk_helpers_table. This (and derived)
	BSPs rely on sbrk delivering even the first/initial
	chunk of memory.

2008-03-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/startup/linkcmds: Add wildcard to gcc_except_table section so
	programs compiled with gcc 4.3.x can link.

2008-02-19	Ralf Corsépius <ralf.corsepius@rtems.org>

	* gen405: Remove (Abandoned).
	* helas403: Remove (Abandoned).
	* acinclude: Regenerate.

2007-12-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* acinclude.m4, gen5200/irq/irq.c, gen5200/startup/bspclean.c: Add
	mvme3100.

2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/startup/bspstart.c, shared/startup/pretaskinghook.c: Eliminate
	copies of the Configuration Table. Use the RTEMS provided accessor
	macros to obtain configuration fields.

2007-12-10	Till Straumann <strauman@slac.stanford.edu>

	* Makefile.am, start/preload.S: moved preload.S
	to ../shared/start.

2007-12-10	Till Straumann <strauman@slac.stanford.edu>

	* shared/irq/irq_asm.S, shared/vectors/vectors.h:
	renamed ASM_BOOKE_PIT_VECTOR to ASM_BOOKE_DEC_VECTOR
	to be closer to 'official' nomenclature.

2007-12-10	Till Straumann <strauman@slac.stanford.edu>

	* shared/openpic/openpic.c: fixed wrong register
	address in openpic_gettimer().

2007-12-10	Till Straumann <strauman@slac.stanford.edu>

	* shared/motorola/vpd.c, shared/motorola/vpd.h:
	added code (originally developed for 'beatnik')
	to read MotLoad VPD data from i2c eeprom.

2007-12-10	Till Straumann <strauman@slac.stanford.edu>

	* shared/vectors/README.deprecated, shared/irq/README.deprecated:
	added READMEs stating that certain files should not be
	copy/paste/modified when creating new BSPs. New BSPs
	are encouraged to use the new library under
	libcpu/powerpc/new-exceptions/bspsupport.

2007-12-10	Till Straumann <strauman@slac.stanford.edu>
	